# HOScrcpy-python

./: .gitignore  README.md  debug_demo.bat  debug_demo2.bat  diagnose_server.py  pyproject.toml  start_demo.bat  test_fport.py  test_py_driver.py  test_smoke.py  test_unit.py
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
HOScrcpy-main/HOScrcpy/: mac_start.sh  win_start.bat
HOScrcpy-main/HOScrcpy-main/: .gitignore  README.md  hoscrcpy API介绍.md  pom.xml
HOScrcpy-main/HOScrcpy-main/src/main/java/: Main.java
HOScrcpy-main/HOScrcpy-main/src/main/java/forms/: LayoutInputForm.form  LayoutInputForm.java  MainForm.form  MainForm.java  RecordPanel.form  RecordPanel.java  RemoteManager.form  RemoteManager.java  SettingDialog.form  SettingDialog.java
HOScrcpy-main/HOScrcpy-main/web_demo/: pom.xml
demo/: app.py
docs/: API.md  GUIDE.md
hos_scrcpy/: __init__.py  interfaces.py
hos_scrcpy/bridge/: StreamBridge.java  __init__.py  extract_servers.py  native_stream.py
hos_scrcpy/bridge/py_driver/: __init__.py  py_hm_driver.py
hos_scrcpy/core/: device.py  hdc_client.py  process.py
hos_scrcpy/gui/: __init__.py  app.py
hos_scrcpy/input/: __init__.py  async_touch.py  fast_touch.py  keyboard.py  keycode.py  mouse.py  touch.py
hos_scrcpy/screen/: __init__.py  capture.py
hos_scrcpy/server/: __init__.py  ws_server.py
hos_scrcpy/ui/: __init__.py  finder.py  hierarchy.py  selector.py  xpath.py
hos_scrcpy/utils/: apps.py  bounds.py  logger.py  settings.py
tmp/: build_java.py
(+19 files in other folders)
